粒子波浪效果-补充

--- a/99_EnterpriseStation/js粒子波浪效果/index.html
+++ b/99_EnterpriseStation/js粒子波浪效果/index.html
@@ -7,6 +7,10 @@
 		.con{
 		    position: relative;
 		}
+		.con p{
+			position: relative;
+			z-index: 9998;
+		}
 		.waves{
 		    display:block;
 		    width:100%;
