--- a/99_EnterpriseStation/phpcms-search-样式.html
+++ b/99_EnterpriseStation/phpcms-search-样式.html
@@ -15,6 +15,7 @@ div#areaid{border:1px solid #A7A6AA;height:18px;margin:0 5px 0 0;padding:2px 5px
         
         <div class="col-auto">
         <div class="crumbs"><a href="{APP_PATH}">首页</a><span> > </span>{catpos($catid)}搜索</div>
+        <form name="myform" method="get" action="">
         <ul class="search-form">
 {loop $forminfos $field $info}
 {if $info[formtype]=='box'}<li class="bk"></li>{/if}
